fix: Document sequence covers the title

--- a/src/css/doc.css
+++ b/src/css/doc.css
@@ -127,37 +127,24 @@
 .container h2 {
     counter-reset: h3;
     position: relative;
-    padding-left: 2.5rem;
 }
 
 .container h2::before {
     counter-increment: h2;
     content: counter(h2) ". ";
-    position: absolute;
-    left: 0;
-    font-weight: bold;
 }
 
 /* 三级标题 - 基础样式 */
 .container h3 {
     counter-reset: h4;
-    position: relative;
-    padding-left: 2.5rem;
-    /* 默认缩进 */
 }
 
-/* 从第10个三级标题开始增加缩进 */
-.container h3:nth-of-type(n+10) {
-    padding-left: 3.5rem;
-    /* 更大缩进 */
-}
 
 .container h3::before {
     counter-increment: h3;
     content: counter(h2) "." counter(h3);
-    position: absolute;
-    left: 0;
     font-weight: bold;
+    margin-right: .5rem;
 }
 
 .container .text--truncate {
